--- a/style/index.css
+++ b/style/index.css
@@ -34,7 +34,7 @@ main {
             &:hover {
                 margin: 10px;
                 padding: 10px;
-                background-color: #52D8D3;
+                background-color: var(--color-cyan);
             }
 
             & .link-game {
