--- a/style/game2.css
+++ b/style/game2.css
@@ -8,7 +8,7 @@
         grid-column: 2;
         grid-row: 1;
     }
-    & .nombre{
+    & .label-name{
         grid-column: 2;
         grid-row: 2;
         margin: 10px;
@@ -34,16 +34,16 @@
             transform: scale(1.1);
         }
     }
-    & .jugador{
+    & .player{
         grid-column: 2;
         grid-row: 5;
         margin: 20px;
     }
-    & .img-derecha{
+    & .img-right{
         grid-column: 3;
         grid-row: 5;
     }
-    & .img-izquierda{
+    & .img-left{
         grid-column: 1;
         grid-row: 5;
     }
