--- a/style/game1.css
+++ b/style/game1.css
@@ -11,6 +11,16 @@
 .title {
     text-align: center;
 }
+.container {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+
+    & .paragraph {
+        width: 600px;
+    }
+}
+
 .main{
     display: flex;
     justify-content: center;
@@ -54,9 +64,6 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
-}
-.title {
-    text-align: center;
 }
 .disappear {
     display: none;
