--- a/style/index.css
+++ b/style/index.css
@@ -27,13 +27,10 @@ main {
             display: inline;
             background-color: #7BFDE3;
             align-content: center;
-            transition-property: padding, margin, color;
-            transition-duration: 0.5s;
-            transition-timing-function: ease-in;
+            transition: transform 0.3s ease;
             border-radius: 10px;
             &:hover {
-                margin: 10px;
-                padding: 10px;
+                transform: scale(1.1);
                 background-color: var(--color-cyan);
             }
 
