--- a/style/game3.css
+++ b/style/game3.css
@@ -13,6 +13,8 @@
         grid-row: 3;
         align-items: center;
         margin-bottom: 50px;
+        padding: 10px;
+        border-radius: 10px;
     }
 
     & .titulo{
@@ -37,6 +39,11 @@
         margin-top: 20px;
         width: 100px;
         border: 1px solid black;
+        transition: transform 0.3s ease;
+
+        &:hover {
+            transform: scale(1.1);
+        }
     }
     .subtitle-try {
         grid-column: 3;
