--- a/style/game3.css
+++ b/style/game3.css
@@ -1,41 +1,33 @@
 .main-container {
-    display: grid; 
-    grid-template-columns: 2;
-    grid-template-rows: 2;
+    margin-top: 50px;
     justify-items: center;
-    align-items: baseline;
-    justify-content: center;
-    grid-template-columns: 300px 200px;
-    vertical-align: center;
 
+    & .logo-question {
+        margin-bottom: 40px;
+    }
     & .input {
-        grid-column: 2;
-        grid-row: 3;
         align-items: center;
-        margin-bottom: 50px;
+        margin: 0 120px;
         padding: 10px;
         border-radius: 10px;
     }
 
     & .titulo{
-        grid-column: 2;
-        grid-row: 2;
+        text-align: center;
+    }
+    & .center-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    & .main-container__image {
+        width: 100px;
     }
 
     & .subtitle-tip {
-        grid-column: 2;
-        grid-row: 4;
-        margin: 0;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    & .paragraph-tip {
-        grid-column: 2;
-        grid-row: 5;
-        margin: 0;
+        margin: 50px 0 20px 0;
     }
     & .button-submit {
-        grid-column: 2;
         margin-top: 20px;
         width: 100px;
         border: 1px solid black;
@@ -44,30 +36,6 @@
         &:hover {
             transform: scale(1.1);
         }
-    }
-    .subtitle-try {
-        grid-column: 3;
-        grid-row: 2;
-        font-family: algerian;
-    }
-    .number-try {
-        grid-column: 3;
-        grid-row: 3;
-    }
-    & .logo-interrogante{
-        grid-column: 2;
-        margin-left: 100px ;
-        margin: 10px;
-        } 
-    & .img-inferior{
-        grid-column: 1;
-        grid-row: 3;
-        width: 30%;
-        }
-    & .img-inferior2{
-        grid-column: 4;
-        grid-row: 3;
-        width: 70%;
     }
 }
 
