--- a/style/game1.css
+++ b/style/game1.css
@@ -41,6 +41,7 @@
         border: 3px solid var(--color-cyan);
         color: #000;
         font-weight: bold;
+        box-shadow: 2px 3px 10px;
         transition-duration: 0.2s;
 
         &:hover {
