--- a/style/index.css
+++ b/style/index.css
@@ -18,7 +18,7 @@ main {
         text-align: center;
         justify-content: center;
         flex-wrap: wrap;
-        margin-top: 50px;
+        margin-top: 40px;
 
         & .link-game {
             text-decoration: none;
@@ -27,10 +27,11 @@ main {
             width: 200px;
             height: 100px;
             display: inline;
-            background-color: #7BFDE3;
+            background-color: #52D8D3;
             align-content: center;
             transition: transform 0.3s ease;
             border-radius: 10px;
+            box-shadow: 5px 5px 10px;
             &:hover {
                 transform: scale(1.1);
                 background-color: var(--color-cyan);
