--- a/style/game3.css
+++ b/style/game3.css
@@ -38,7 +38,7 @@
         border-radius: 20px;
         font-weight: bold;
         width: 100px;
-        border: 1px solid black;
+        border: 1px solid #000;
         transition: transform 0.3s ease;
 
         &:hover {
