--- a/style/game1.css
+++ b/style/game1.css
@@ -40,15 +40,15 @@
         margin: 20px 10px;
         text-align: center;
         border-radius: 20px;
-        background-color: var(--color-light-cyan);
-        border: 3px solid var(--color-cyan);
+        background-color: var(--light-cyan);
+        border: 3px solid var(--cyan);
         color: #000;
         font-weight: bold;
         box-shadow: 2px 3px 10px;
         transition-duration: 0.2s;
 
         &:hover {
-            background-color: var(--color-cyan);
+            background-color: var(--cyan);
         }
     }
 }
