--- a/style/game1.css
+++ b/style/game1.css
@@ -10,6 +10,9 @@
         margin-left: 20px;
         margin-right: 10px;
     }
+    & img {
+        margin-bottom: 20px;
+    }
 }
 .title {
     text-align: center;
