--- a/style/game1.css
+++ b/style/game1.css
@@ -37,7 +37,7 @@
 
     & .button-level__link {
         text-decoration: none;
-        padding: 20px 10px;
+        padding: 15px 0;
         color: #000;
         width: 200px;
         margin: 20px 10px;
@@ -52,6 +52,18 @@
 
         &:hover {
             background-color: var(--cyan);
+        }
+        & p:first-child {
+            font-size: 20px;
+            padding: 5px;
+            background-color: var(--cyan);
+            border-radius: 20px;
+            max-width: 90px;
+            margin: auto;
+            border: #000 solid 1.5px;
+        }
+        & p:nth-child(2){
+            margin-top: 20px;
         }
     }
 }
